texbookwidget is now reference-only, will be redundant

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 # Git .gitignore file, this tells git what to ignore and what to 
 # allow to be included in the repo
 
-# Standard .gitignore for android
+# Standard .gitignore for android projects
+
+# Ignore any static reference-only projects.
+*-v*
 
 #ignore any private keystore files.
 *.jks
