--- a/android_gradle/RandomQuotesApp/build.gradle
+++ b/android_gradle/RandomQuotesApp/build.gradle
@@ -1,19 +1,26 @@
-buildscript {
-    repositories {
+buildscript 
+{
+    repositories 
+    {
         mavenCentral()
     }
-    dependencies {
+    dependencies 
+    {
         classpath 'com.android.tools.build:gradle:1.3.0'
     }
 }
+
 apply plugin: 'android'
 
-android {
+android 
+{
     compileSdkVersion 'android-19'
     buildToolsVersion '23.0.0'
 
-    buildTypes {
-        release {
+    buildTypes 
+    {
+        release 
+        {
             minifyEnabled false
             proguardFile getDefaultProguardFile('proguard-android.txt')
         }
