--- a/.gitignore
+++ b/.gitignore
@@ -37,5 +37,5 @@
 # ---
 
 # Allow specific release signed .apks.
-android_gradle/RandomQuotes/RandomQuotesApp/build/outputs/apk/*-release.apk
-android_gradle/RandomQuotes/RandomQuotesWidget/build/outputs/apk/*-release.apk
+!android_gradle/RandomQuotes/RandomQuotesApp/build/outputs/apk/*-release.apk
+!android_gradle/RandomQuotes/RandomQuotesWidget/build/outputs/apk/*-release.apk
