--- a/android_gradle/RandomQuotes/RandomQuotesApp/src/main/AndroidManifest.xml
+++ b/android_gradle/RandomQuotes/RandomQuotesApp/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.cat.randomquotesapp">
     
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
     <application
         android:icon="@drawable/ic_launcher"
