--- a/android_gradle/RandomQuotes/RandomQuotesApp/src/main/AndroidManifest.xml
+++ b/android_gradle/RandomQuotes/RandomQuotesApp/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.DISABLE_KEYGUARD"/>
 
     <application
         android:icon="@drawable/ic_launcher"
