HouseKeeping Before Starting Development.
Update logs
---
* Quotes Display Apps.
    Update Android Workspace, use the latest stable tools
    (Remember to do this for every new version release).
    * Gradle Build System:
        Gradle 2.13
    * Gradle Plugin for Android Development:
        Android Gradle Plugin: 2.1.0
    * Android SDK to compile source:
        compileSdkVersion: Android 6.
    * Android SDK Build Tools:
        buildToolsVersion '23.0.3'
    > Done.

* Quotes Display Apps.
    Fix compileSdkVersion: Android 6.0 Marshmallow.
    minSdkVersion: 16 - Android 4.1 JellyBean
    targetSdkVersion: 19 - Android 4.4 KitKat - My Samsung Phone.
    > Done.

* Quotes Display Apps.
    change ownership to organization.
    - modify source.
    > Done.
    - change keys.
    > Done.
    - Change Scripts.
    > Done.
    - Test new release build.
    > Done.
---

--- a/android_gradle/RandomQuotes/RandomQuotesWidget/build.gradle
+++ b/android_gradle/RandomQuotes/RandomQuotesWidget/build.gradle
@@ -6,7 +6,7 @@ buildscript
     }
     dependencies 
     {
-        classpath 'com.android.tools.build:gradle:1.5.0'
+        classpath 'com.android.tools.build:gradle:2.1.0'
     }
 }
 
@@ -14,16 +14,24 @@ apply plugin: 'android'
 
 android 
 {
-    compileSdkVersion 'android-19'
-    buildToolsVersion '23.0.0'
+    compileSdkVersion 'android-23'
+    buildToolsVersion '23.0.3'
+
+    defaultConfig 
+    {
+        versionCode 3
+        versionName "2.1"
+        targetSdkVersion 19
+        minSdkVersion 16
+    }
 
     signingConfigs
     {
         release
         {
-            storeFile file("../../../android_keystore.jks")
+            storeFile file("../../../../android_keystore/osohm_android_keystore.jks")
             storePassword System.getenv("ANDROID_KEYSTORE_PASSWORD")
-            keyAlias "c.a.t"
+            keyAlias "osohm"
             keyPassword System.getenv("ANDROID_KEYSTORE_KEY")
         }
     }
@@ -36,7 +44,7 @@ android
             proguardFile getDefaultProguardFile('proguard-android.txt')
             signingConfig signingConfigs.release
         }
-    }  
+    }
 }
  
 dependencies 
