--- a/android_gradle/RandomQuotes/RandomQuotesApp/src/main/AndroidManifest.xml
+++ b/android_gradle/RandomQuotes/RandomQuotesApp/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.cat.randomquotesapp">
+      package="org.osohm.randomquotesapp">
     
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
@@ -12,7 +12,7 @@
         android:theme="@style/AppTheme" >
         
         <activity
-            android:name="com.cat.randomquotesapp.RandomQuotesApp" 
+            android:name="org.osohm.randomquotesapp.RandomQuotesApp" 
             android:theme="@android:style/Theme.Light.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,7 +21,7 @@
         </activity> 
         
         <activity
-            android:name="com.cat.randomquotesapp.AppConfiguration" >
+            android:name="org.osohm.randomquotesapp.AppConfiguration" >
         </activity> 
     </application>
 
