--- a/android_gradle/RandomQuotes/RandomQuotesLib/build.gradle
+++ b/android_gradle/RandomQuotes/RandomQuotesLib/build.gradle
@@ -6,7 +6,7 @@ buildscript
     }
     dependencies 
     {
-        classpath 'com.android.tools.build:gradle:1.5.0'
+        classpath 'com.android.tools.build:gradle:2.1.0'
     }
 }
 
@@ -14,8 +14,16 @@ apply plugin: 'android-library'
 
 android 
 {
-    compileSdkVersion 'android-19'
-    buildToolsVersion '23.0.0'
+    compileSdkVersion 'android-23'
+    buildToolsVersion '23.0.3'
+
+    defaultConfig 
+    {
+        versionCode 3
+        versionName "2.1"
+        targetSdkVersion 19
+        minSdkVersion 16
+    }
 
     buildTypes 
     {
