Ongoing development of v2.1 features.
* Quote Display Apps.
    Fix the android development scripts so they are useful to anyone.
    (Use printf only, no echo.)
    > Done.

* Random Quotes App.
    Select 3rd party file/dir choser library.
    aFileDialog, simple and good licensing, no Nonsense integration with anything.
    > Done.

* Random Quotes App.
    Build aFileDialog, modify and use to fit our purposes.
    > Done.

* Random Quotes App.
    Add support for scanning directories.
    First make sure the functionality is there, we will optimize prior
    to release.
    > Done.

* Random Quotes Widget.
    Replicate common changes from quotes App.
    Completed except for variable update period for the widget which
    requires the use of an alarm manager, lets try this on Monday.
    Otherwise we will keep it static as this is not critical
    functionality for the widget.
    > Done.

--- a/android_gradle/RandomQuotes/RandomQuotesApp/src/main/AndroidManifest.xml
+++ b/android_gradle/RandomQuotes/RandomQuotesApp/src/main/AndroidManifest.xml
@@ -21,6 +21,11 @@
         <activity
             android:name="org.osohm.randomquotesapp.AppConfiguration" >
         </activity> 
+        
+        <activity 
+            android:name="ar.com.daidalos.afiledialog.FileChooserActivity" >
+        </activity>
+        
     </application>
 
 </manifest>
