--- a/android_gradle/RandomQuotes/RandomQuotesWidget/src/main/AndroidManifest.xml
+++ b/android_gradle/RandomQuotes/RandomQuotesWidget/src/main/AndroidManifest.xml
@@ -25,6 +25,10 @@
                 <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE"/>
             </intent-filter>
         </activity>
+        
+        <activity 
+            android:name="ar.com.daidalos.afiledialog.FileChooserActivity" >
+        </activity>
     
     </application>
     
