Fixing issue with Random Quotes App: screen not waking up during daytime...
* Random Quotes App.
    Fix Issue: window manager doesn't force a screen turn ON at daytime.
    Use Wakelocks (deprecated) to turn screen ON until they become
    obsolete.

    You already did your research, and you spent hell of a long time to
    cover every corner (wakelocks, brightness and window parameters),
    do not waste more time on this!

    As it stands today Android has no way to allow the application to turn
    the device screen ON/OFF within an started activity. If you use their
    windows parametters you can only set the TURN_SCREEN_ON FLAG only once
    at the creation of the activity, aftwerwards there is no way to turn
    the screen OFF, ON multiple times as our application requires.

    You can use the brightness hack, but of course:
    - Brightness 0 does not actually mean the screen is OFF only as dim as
        possible (in both of my devices the screen is still ON).
    - If the user locks the screen, which everyone does, brightness can not
        really turn the screen back ON.

    Like most dirty hacks, it looks like it would work and then ....it's
    useless, it is not intended for that purpose.

    The wakelocks provide the necessary functionality and they do what they
    are intended to do without nasty hacks. We will use them from now on
    until Android makes them obsolete at which point, we need to figure out
    alternatives.
    > Done.

* Random quotes App.
    Make daytime based on event, not tied to updates runnable.
    Why? is it really necessary? It's not. Tie it to the runnable update.
    C'mon, you don't need it.
    > Done.

--- a/android_gradle/RandomQuotes/RandomQuotesApp/src/main/AndroidManifest.xml
+++ b/android_gradle/RandomQuotes/RandomQuotesApp/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
       package="org.osohm.randomquotesapp">
     
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
     <application
         android:icon="@drawable/ic_launcher"
